@@ -4,6 +4,7 @@ releases are sorted from youngest to oldest.
 version 9:
 - av_basename and av_dirname
 - adobe and limelight publisher authentication in RTMP
+- VDPAU hardware acceleration through normal hwaccel
 
 
 version 9_beta3:
